# WireGuard-Service

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: python-check.yml
alembic/: env.py
alembic/versions/: 2026_02_05_1647-29e012bee8f8_create_server_table.py  2026_02_06_1526-0e8f5bf0ef91_add_public_key_to_server_table.py  2026_04_26_1750-264d6411c390_add_to_server_table_key_filename_and_.py
wireguard_service/: .env.template  alembic.ini  app_lifespan.py  config.default.yaml  config.py  exceptions.py  helpers.py  jinja2_templates.py  main.py
wireguard_service/action/: __init__.py  _wire_guard.py
wireguard_service/actions/: __init__.py  client_config.py
wireguard_service/api/: __init__.py  dependencies.py
wireguard_service/api/views/: __init__.py  client_config_view.py  config_view.py  generate_key.py  interfaces_view.py  peers_view.py  servers_view.py
wireguard_service/infrastructure/wg_client/: __init__.py  _protocols.py
wireguard_service/infrastructure/wireguard/: _clients.py  _parameters.py
wireguard_service/models/: __init__.py  base.py  servers.py
wireguard_service/schemas/: __init__.py  client_config.py  interface.py  peer.py  servers.py  show.py
wireguard_service/storages/: __init__.py  database.py
wireguard_service/storages/peers/: crud.py
wireguard_service/storages/servers/: __init__.py  crud.py
wireguard_service/storages/wireguard/: crud.py
wireguard_service/templates/: client_template.config
wireguard_service/wg_client/: __init__.py  _clients.py  _parameters.py
(+22 files in other folders)
