[project]
name = "wgservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "paramiko>=4.0.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.mypy]
python_version = "3.13"
