[project]
name = "wgservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi[standard]>=0.127.0",
    "jinja2>=3.1.6",
    "paramiko>=4.0.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.isort]
profile = "black"


[tool.mypy]
python_version = "3.13"
